--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-family: "Lilita One", sans-serif;
             font-weight: 400;
             font-style: normal;
-            background: linear-gradient(to right,orange,orange,rgb(255, 255, 255),orange,black);
+            background: linear-gradient(to right,orange,orange,rgb(255, 255, 255),orange,orange);
         }
         
         .container {
